According to spec native text controls should automatically get the ARIA textbox role

According to HTML to platform accessibility mappings 1.1 native text boxes input and textarea, but not content editables, should get an ARIA role of textbox.
I went through all our code in Blink and observed that aria-autocomplete was the only case where we didn't apply the same treatment to ARIA and native text controls.
R=aleventhal@chromium.org, dmazzoni@chromium.org

Bug: 761230
Change-Id: Ie25e0b072b24f1f6ebf6d5b2e317b656fb463fdf
Tested: manually, browser test
Reviewed-on: https://chromium-review.googlesource.com/804915
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521358}
Former-commit-id: 80fcc0006f18421ea22bc3ba0d35a0cddf3dea1d